# passMangerCSharpV2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  passMangerCSharpV2.csproj  passMangerCpp.sln  premake5.lua  setup.bat  setup.sh
include/: application.h
passManger/: Makefile  passManger.vcxproj  passManger.vcxproj.filters
passManger/src/: main.cpp
passManger/src/classes/application/: application.cpp  application.h
passManger/src/classes/credential/: credential.cpp  credential.h
passManger/src/classes/enc_dec/: enc_dec.cpp  enc_dec.h
passManger/src/classes/enc_dec/enc/: encryptor.cpp  encryptor.h
passManger/src/classes/key/: key.cpp  key.h
passManger/src/classes/misc/: misc.cpp  misc.h
passManger/src/classes/profile/: profile.cpp  profile.h
passManger/src/include/: application.h
passManger/src/include/application/: application.h
passManger/src/include/misc/: misc.h
passManger/src/include/profile/: profile.h
passManger/src/libs/: sha256.cpp  sha256.h
passManger/src/source/: main.cpp
passManger/src/source/application/: application.cpp
passManger/src/source/credential/: credential.cpp
passManger/src/source/misc/: misc.cpp
passManger/src/source/profile/: profile.cpp
source/: main.cpp
src/: Program.cs
src/backend/: application.cs
